--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/react": "^2.3.0",
+    "d3-scale": "^4.0.2",
     "gatsby": "^5.13.7",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-mdx": "^5.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
@@ -26,7 +28,8 @@
     "gatsby-transformer-sharp": "^5.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-simple-maps": "^3.0.0"
   },
   "repository": {
     "type": "git",
